--- a/src/Yathzee/Yathzee.csproj
+++ b/src/Yathzee/Yathzee.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiceGenerator.cs" />
+    <Compile Include="Die.cs" />
+    <Compile Include="DieImage.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -52,6 +55,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -60,6 +66,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -73,6 +80,27 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="die1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="die2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="die3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="die4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="die5.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="die6.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="dieBlank.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
