--- a/src/Yathzee/Yathzee.csproj
+++ b/src/Yathzee/Yathzee.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScoreSection.cs" />
     <Compile Include="DiceGenerator.cs" />
     <Compile Include="Die.cs" />
     <Compile Include="DieImage.cs" />
