--- a/src/Yathzee/Yathzee.csproj
+++ b/src/Yathzee/Yathzee.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LowerScoreSection.cs" />
     <Compile Include="ScoreSection.cs" />
     <Compile Include="DiceGenerator.cs" />
     <Compile Include="Die.cs" />
@@ -56,6 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UpperScoreSection.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
